[gd_scene load_steps=2 format=3 uid="uid://bxe5nh2ej1176"]

[ext_resource type="Script" path="res://Game/User Interface/Scripts/DebugMenu.gd" id="1_1hl3j"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_1hl3j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -101.0
grow_horizontal = 0
grow_vertical = 0

[node name="MoonButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "moon"

[node name="StarButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "star"

[node name="SunButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "sun"

[connection signal="pressed" from="VBoxContainer/MoonButton" to="." method="_on_moon_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StarButton" to="." method="_on_star_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SunButton" to="." method="_on_sun_button_pressed"]
